# graphgenerator

./: CMakeLists.txt  LICENSE  example_config.cfg  main.cpp
include/: AliasTable.h  ConfigParser.h  GraphGenTypes.h
src/: EdgeDistribution.cpp  GraphModel copy.cpp  GraphModel.cpp  InputModel.cpp  NodeType.cpp  Prime.cpp  Reader.cpp  Writer.cpp
tests/: TestNodeType.cpp  aliasTest.cpp  testPrime.cpp
